JEDIT 3.2 VERSION HISTORY

* Version 3.2pre8

+ New Features

- PV-WAVE syntax highlighting (Ed Stewart)

+ Enhancements

- Improved XSL abbrevs (Ollie Rutherfurd)
- jEditLauncher updates (John Gellene)
- Updated Duplicate_Line and Next_Char macros (John Gellene)
- Improved shortcuts option pane (Dirk Moebius)

+ Neutral

- Only selections created with the mouse are stored in the % register

+ Bug Fixes

- Right mouse button clicks didn't work on all platforms
- Printing didn't work due to a change in 3.2pre7
- Fixed exception printed when trying to use the file chooser dialog box
- jEditLauncher didn't work due to an EditServer change in pre7

* Version 3.2pre7

+ New Features

- BeanShell 1.2beta1 included
- When running on Unix with Java 2 version 1.4, clicking the middle
  mouse button in the text area now pastes the primary selection. This
  obsoletes the XClipboard plugin
- Visual Foxpro syntax highlighting (Matt Price)
- SQR syntax highlighting (Richard Ashwell)
- Cruddy -bshclient command-line switch replaced with -run=<script>
  parameter; it will run the specified script file, and works in both
  the initial and client instances of jEdit.
  - The script is run in the global namespace, so variables and
    functions defined within will be available for the rest of the
    editing session. Just like a startup script.
  - The 'view', 'buffer', 'editPane' and 'textArea' variables are not
    set in this script; if it is being run at startup, it will also be
    run before the first view is even initialized. Just like a startup
    script
- Just for fun, a sample startup script, named changeUIFonts.bsh is
  included. This is an undocumented feature and will be replaced with
  a setting in the global options dialog box in the next major release.

+ Enhancements

- Improved jEditLauncher (John Gellene):
   - executes scripts and runs JDiff from Windows shell menu or from
     scripting interface.
   - launcher waits for extended timeout period for jEdit to load.