@@ -34,6 +34,7 @@ echo jedit.exe >> installer/jedit-windows
 echo jeditsrv.exe >> installer/jedit-windows
 echo jeservps.dll >> installer/jedit-windows
 echo jeshlstb.dl_ >> installer/jedit-windows
+echo unlaunch.exe >> installer/jedit-windows
 
 echo -n "jedit-windows: "
 ls -l `cat installer/jedit-windows` | awk 'BEGIN { size=0 } { size+=$5 } END { print size / 1024 }'
