@@ -174,6 +174,9 @@ view.electricBorders=3
 # Smart home/end
 view.homeEnd=true
 
+# Middle mouse button pastes % register
+view.middleMousePaste=true
+
 # Gutter background color
 view.gutter.bgColor=#ffffff
 
